--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-csscomb": "^3.0.0",
-    "grunt-sass": "^0.14.0"
+    "grunt-sass": "^0.14.0",
+    "grunt-wp-i18n": "^0.4.7"
   },
   "repository": {
     "type": "git",
