--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.0",
     "grunt-sass": "^0.14.0",
     "grunt-wp-i18n": "^0.4.7"
