--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.0",
+    "grunt-image": "^0.8.2",
     "grunt-sass": "^0.14.0",
     "grunt-wp-i18n": "^0.4.7"
   },
